# tdx_time_check

./: README.md  pyproject.toml
src/tdxtimecheck/: cli.py
src/tdxtimecheck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
