[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tdxtimecheck"
version = "1.0.3"
description = "A CLI tool to calculate worked vs target hours"
authors = [
    { name = "Vigil Thomas", email = "vigilthomas17@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"

[project.scripts]
tdxtimecheck = "tdxtimecheck.cli:main"
